# GameEngine

./: .clang-format  .gitignore  67-warehouse_box.rar  CMakeLists.txt  ResourcePackagesEditor.cpp  ResourcePackagesEditor.h  Shader.cpp  Shader.h  compile_commands.json  glad.c  main.cpp
configs/: engine.json  main_scene — копия.json  main_scene.json  packages_info.json  resources.pkg
configs/scenes/: New scene.json  prekol.json  test scene.json
meshes/FinalBaseMesh/: config.json
shaders/: shader.frag
shaders/default/: frag.glsl  vert.glsl
shaders/flat_color/: config.json  frag.glsl  vert.glsl
shaders/light/: config.json  frag.glsl
src/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  ComponentBuilder.cpp  ComponentBuilder.h  Context.h  Engine.cpp  Engine.h  FileSystem.cpp  FileSystem.h  FlipbookAnimationComponent.cpp  FlipbookAnimationComponent.h  InputManager.cpp  Logger.cpp  Logger.h  MaterialComponent.cpp  MaterialComponent.h  MeshBuilder.cpp  MeshBuilder.h  MeshComponent.cpp  MeshComponent.h  MeshStore.cpp  MeshStore.h  Node.cpp  Node.h  Renderer.cpp  ResourcePackage.cpp  ResourcePackage.h  ResourcePackageStore.cpp  ResourcePackageStore.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneRequester.cpp  SceneRequester.h  SceneRequesterHelper.h  SceneStore.cpp  SceneStore.h  (+15 more)
src/editor/: ComponentWidget.cpp  ComponentWidget.h  EngineController.cpp  EngineController.h  EngineObserver.cpp  EngineObserver.h  NodeBuilder.cpp  NodeBuilder.h  NodeTreeBuilder.cpp  NodeTreeBuilder.h  NodeTreeWidgetBuilder.cpp  NodeTreeWidgetBuilder.h  NodeWidget.cpp  NodeWidget.h  PackageContentView.cpp  PackageContentView.h  ResourcePackagesEditor.cpp  ResourcePackagesEditor.h  ResourcePackagesItemModel.cpp  ResourcePackagesItemModel.h  SceneNodeTree.cpp  SceneNodeTree.h  TreeWidgetBuilderHelper.cpp  TreeWidgetBuilderHelper.h  UserComponentBuilder.h  UserNodeTreeBuilder.h  UserTreeWidgetBuilder.cpp  UserTreeWidgetBuilder.h  Utils.cpp  Utils.h  treewidgetbuilderhelper.cpp  treewidgetbuilderhelper.h
src/editor/widget_builder/: NodeTreeWidgetBuilder.cpp  NodeTreeWidgetBuilder.h
src/engine/: CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  ComponentBuilder.cpp  ComponentBuilder.h  Context.h  Engine.cpp  Engine.h  EngineSettings.cpp  EngineSettings.h  FileSystem.cpp  FileSystem.h  FlipbookAnimationComponent.cpp  FlipbookAnimationComponent.h  Helpers.h  InputManager.cpp  InputManager.h  LightSourceComponent.cpp  LightSourceComponent.h  Logger.cpp  Logger.h  MaterialComponent.cpp  MaterialComponent.h  MeshBuilder.cpp  MeshComponent.cpp  MeshComponent.h  MeshStore.cpp  MeshStore.h  MouseEventFilterComponent.cpp  MouseEventFilterComponent.h  Node.cpp  Node.h  NodePositioningHelper.cpp  NodePositioningHelper.h  RenderComponent.cpp  RenderComponent.h  RenderPassComponent.cpp  RenderPassComponent.h  (+38 more)
src/engine/3rdparts/glad/: glad.h
src/engine/renderpasses/: BaseLightRenderPass.cpp  BaseLightRenderPass.h  BaseRenderPass.cpp  BaseRenderPass.h  RenderPass.h
